[gd_scene load_steps=43 format=2]

[ext_resource path="res://images/Wall 4 Light.png" type="Texture" id=1]
[ext_resource path="res://images/Floor 1.png" type="Texture" id=2]
[ext_resource path="res://images/elevador para o jogo.jpeg" type="Texture" id=3]
[ext_resource path="res://images/Computer station 2.png" type="Texture" id=4]
[ext_resource path="res://images/Wall 3.png" type="Texture" id=5]
[ext_resource path="res://Idle_Hawking_new.png" type="Texture" id=6]
[ext_resource path="res://NPC_rosa.tscn" type="PackedScene" id=7]
[ext_resource path="res://Terceiro_Plano.gd" type="Script" id=8]
[ext_resource path="res://DellBorg_Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Mouse_Cursor.tscn" type="PackedScene" id=11]
[ext_resource path="res://AssetsInventario/PenDrive.png" type="Texture" id=12]
[ext_resource path="res://Area_elevador_TerceiroPlano.gd" type="Script" id=13]
[ext_resource path="res://NPC_Azul.tscn" type="PackedScene" id=14]
[ext_resource path="res://AssetsInventario/PeçasPC2.png" type="Texture" id=15]
[ext_resource path="res://images/hud inventario.png" type="Texture" id=16]
[ext_resource path="res://AssetsInventario/PeçasPC3.png" type="Texture" id=17]
[ext_resource path="res://AssetsInventario/CD.png" type="Texture" id=18]
[ext_resource path="res://NPC_Hawking.gd" type="Script" id=19]
[ext_resource path="res://AssetsJogoPÓSBG/AssetsNumeracaoAndares/3.png" type="Texture" id=20]
[ext_resource path="res://OBJETIVO.tscn" type="PackedScene" id=21]
[ext_resource path="res://painelpreto.tscn" type="PackedScene" id=22]
[ext_resource path="res://Popup_tecla_E.tscn" type="PackedScene" id=23]
[ext_resource path="res://Sounds/Coletar Item.ogg" type="AudioStream" id=24]
[ext_resource path="res://HUD_INVENTARIO.tscn" type="PackedScene" id=25]
[ext_resource path="res://assetssprint5alt/1pc2.png" type="Texture" id=26]
[ext_resource path="res://assetssprint5alt/1escaneadorelevador.png" type="Texture" id=27]
[ext_resource path="res://assetssprint5alt/1pcalternativo.png" type="Texture" id=28]
[ext_resource path="res://assetssprint5alt/1paineleletrico.png" type="Texture" id=29]
[ext_resource path="res://assetssprint5alt/1telefone.png" type="Texture" id=30]
[ext_resource path="res://AreaPC_Stakeholders.gd" type="Script" id=31]
[ext_resource path="res://images/fumacasembg.png" type="Texture" id=32]

[sub_resource type="TileSet" id=12]
0/name = "Wall 3.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -8, -9, 82, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=1]
0/name = "Floor 1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Wall 4 Light.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Computer station 2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "elevador para o jogo.jpeg 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Wall 3.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 639.125, 15.625 )

[sub_resource type="SegmentShape2D" id=8]
b = Vector2( 1, 656 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 35, 50 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 25, 23 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40.5, 55 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "fumaca"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 67.5, 63.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 11.0
margin_right = 1292.0
margin_bottom = 666.0
color = Color( 0.466667, 0.458824, 0.462745, 1 )

[node name="TileMap3" type="TileMap" parent="."]
tile_set = SubResource( 12 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 4, 0, 2, 4, 0, 4, 1, 0, 8, 1, 0, 10, 1, 0, 12, 1, 0, 14, 1, 0, 16, 1, 0, 18, 1, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 131072, 1, 0, 131076, 1, 0, 131078, 1, 0, 131080, 1, 0, 131082, 1, 0, 131084, 1, 0, 131086, 1, 0, 131088, 1, 0, 131090, 1, 0, 262144, 1, 0, 262146, 1, 0, 262148, 1, 0, 262150, 1, 0, 262152, 1, 0, 262154, 1, 0, 262156, 1, 0, 262158, 1, 0, 262160, 1, 0, 262162, 1, 0, 327680, 1, 0, 327682, 1, 0, 327684, 1, 0, 327686, 1, 0, 327688, 1, 0, 327690, 1, 0, 327692, 1, 0, 327694, 1, 0, 327696, 1, 0, 327698, 1, 0, 458754, 1, 0, 458756, 1, 0, 458759, 4, 0, 458760, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458768, 4, 0, 458769, 4, 0, 524288, 4, 0, 524295, 4, 0, 524296, 4, 0, 524298, 4, 0, 524299, 4, 0, 524301, 4, 0, 524302, 4, 0, 524304, 4, 0, 524305, 4, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 1, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 65537, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 3, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458761, 4, 0, 458762, 4, 0, 458764, 4, 0, 458765, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 524289, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524297, 4, 0, 524300, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )

[node name="HUD_INVENTARIO" parent="." instance=ExtResource( 25 )]

[node name="Colisao_Chao" type="StaticBody2D" parent="."]
position = Vector2( 1280, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Chao"]
position = Vector2( -639.125, 595.375 )
shape = SubResource( 4 )

[node name="Colisao_Parede_Direita" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Direita"]
position = Vector2( 1270, -2 )
shape = SubResource( 8 )

[node name="Colisao_Parede_Esquerda" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Esquerda"]
shape = SubResource( 8 )

[node name="PauseMenu" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 596.0
margin_top = 196.0
margin_right = 596.0
margin_bottom = 196.0

[node name="Area_elevador" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Area_elevador"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_elevador"]
position = Vector2( 192, 526 )
shape = SubResource( 9 )

[node name="Popup_tecla_E" parent="Area_elevador" instance=ExtResource( 23 )]

[node name="painel_elevador" parent="Area_elevador" instance=ExtResource( 22 )]

[node name="NPC_rosa" parent="." instance=ExtResource( 7 )]
visible = false

[node name="NPC_Azul" parent="." instance=ExtResource( 14 )]
visible = false

[node name="1Paineleletrico" type="Sprite" parent="."]
position = Vector2( 884, 531 )
scale = Vector2( 2.15957, 1.94444 )
texture = ExtResource( 29 )

[node name="1Pcalternativo" type="Sprite" parent="."]
position = Vector2( 1051, 511 )
scale = Vector2( 1.44322, 2.05469 )
texture = ExtResource( 28 )

[node name="1Pc2" type="Sprite" parent="."]
position = Vector2( 1120, 546 )
scale = Vector2( 2.96154, 2.46 )
texture = ExtResource( 26 )

[node name="1Escaneadorelevador" type="Sprite" parent="."]
position = Vector2( 276, 510 )
scale = Vector2( 1.35, 1.35 )
texture = ExtResource( 27 )

[node name="1Telefone" type="Sprite" parent="."]
position = Vector2( 470, 511 )
scale = Vector2( 1.75, 1.73077 )
texture = ExtResource( 30 )

[node name="Inventario" type="Camera2D" parent="."]

[node name="Inventariopng" type="Sprite" parent="Inventario"]
position = Vector2( 217.5, 92 )
scale = Vector2( 1.8716, 1.87629 )
texture = ExtResource( 16 )

[node name="PenDrive" type="Sprite" parent="Inventario/Inventariopng"]
visible = false
position = Vector2( -66.7022, -9.55308 )
scale = Vector2( 0.553009, 0.365957 )
texture = ExtResource( 12 )

[node name="RAM" type="Sprite" parent="Inventario/Inventariopng"]
visible = false
position = Vector2( -20.4256, -10.2235 )
scale = Vector2( 0.314875, 0.423405 )
texture = ExtResource( 15 )

[node name="PlacaVideo" type="Sprite" parent="Inventario/Inventariopng"]
visible = false
position = Vector2( 27.4468, -7.5419 )
scale = Vector2( 0.214, 0.28 )
texture = ExtResource( 17 )

[node name="Cd" type="Sprite" parent="Inventario/Inventariopng"]
visible = false
position = Vector2( 75.3957, -7.35816 )
scale = Vector2( 0.468994, 0.455785 )
texture = ExtResource( 18 )

[node name="RAM_Cena" type="Area2D" parent="."]
visible = false
position = Vector2( 834, 566 )
__meta__ = {
"_edit_group_": true
}

[node name="RAM" type="Sprite" parent="RAM_Cena"]
position = Vector2( -1, -2 )
scale = Vector2( 0.489729, 0.324588 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RAM_Cena"]
position = Vector2( -2, -13 )
shape = SubResource( 10 )

[node name="Popup_tecla_E" parent="RAM_Cena" instance=ExtResource( 23 )]

[node name="NPC_Hawking" type="Area2D" parent="."]
position = Vector2( 698, 557 )
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NPC_Hawking"]
position = Vector2( 30.5, -34 )
scale = Vector2( 2.54839, 2.78947 )
texture = ExtResource( 6 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_Hawking"]
position = Vector2( 33.5, -37 )
shape = SubResource( 11 )

[node name="Popup_tecla_E" parent="NPC_Hawking" instance=ExtResource( 23 )]

[node name="MainPersonagemMVP2" parent="." instance=ExtResource( 9 )]
position = Vector2( 256, 559 )

[node name="Mouse_Cursor2" parent="." instance=ExtResource( 11 )]

[node name="Node2D" parent="." instance=ExtResource( 21 )]

[node name="3" type="Sprite" parent="."]
position = Vector2( 192, 412 )
scale = Vector2( 2, 1.86111 )
texture = ExtResource( 20 )

[node name="itempegadosfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = -7.363

[node name="Fumacasembg" type="Sprite" parent="."]
position = Vector2( 1059, 373 )
texture = ExtResource( 32 )
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fumacasembg"]
autoplay = "fumaca"
anims/RESET = SubResource( 13 )
anims/fumaca = SubResource( 14 )

[node name="AreaPC_Stakeholders" type="Area2D" parent="."]
position = Vector2( 1051, 565 )
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}
SceneToGo = "res://Stakeholders.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPC_Stakeholders"]
position = Vector2( 19.5, -53.5 )
shape = SubResource( 15 )

[node name="Popup_tecla_E" parent="AreaPC_Stakeholders" instance=ExtResource( 23 )]

[connection signal="body_entered" from="Area_elevador" to="Area_elevador" method="_on_Area_elevador_body_entered"]
[connection signal="body_exited" from="Area_elevador" to="Area_elevador" method="_on_Area_elevador_body_exited"]
[connection signal="body_entered" from="RAM_Cena" to="." method="_on_RAM_Cena_body_entered"]
[connection signal="body_exited" from="RAM_Cena" to="." method="_on_RAM_Cena_body_exited"]
[connection signal="body_entered" from="NPC_Hawking" to="NPC_Hawking" method="_on_NPC_Hawking_body_entered"]
[connection signal="body_exited" from="NPC_Hawking" to="NPC_Hawking" method="_on_NPC_Hawking_body_exited"]
[connection signal="body_entered" from="AreaPC_Stakeholders" to="AreaPC_Stakeholders" method="_on_AreaPC_Stakeholders_body_entered"]
[connection signal="body_exited" from="AreaPC_Stakeholders" to="AreaPC_Stakeholders" method="_on_AreaPC_Stakeholders_body_exited"]
